--- a/index.html
+++ b/index.html
@@ -6,49 +6,34 @@
     <title>Farwah Express</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        .seat{
-            display: inline-block;
-            justify-content: center;
-            align-items: center;
-            border-radius: 12px;
-            background: #f2efef;
-            font-weight: 600;
-            width: 100px;
-            height: 50px;
-        }
-        .seat-heading{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-            border-radius: 12px;
-            /* background: #d00b0b; */
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body style="padding: 100px;">
+<body class="lg:p-20">
         <header class="flex justify-between p-6">
-            <div id="logo" class="p-2">
-                F-Ticket
+            <div id="logo" class="p-2 font-bold text-2xl">
+                P-Ticket
             </div>
-            <div id="nemu" class="p-2 flex justify-evenly w-8/12 text-center">
+            <div id="nemu" class="p-2 lg:flex justify-evenly w-8/12 text-center hidden">
                 <a href="">Home</a>
                 <a href="">About</a>
                 <a href="">Destination</a>
             </div>
-            <div id="icon" class="flex gap-2 p-2">
+            <div id="icon" class="flex gap-2 bg-green-100 rounded-lg pt-3 pl-6 pr-6 border-2">
                 <span>Bus</span>
                 <img src="./images/bus-icon.png" alt="">
             </div>
         </header>
         <!-- banner Section -->
-        <section class="banner h-[550px] bg-[url('./images/banner.png')] bg-no-repeat bg-contain rounded-3xl">
-            
+        <section class="banner lg:h-[550px] h-[300px] bg-[url('./images/banner.png')] bg-no-repeat bg-cover rounded-3xl text-center">
+                <div class="pt-[12%]">
+                    <h1 class="text-3xl font-bold text-white text-center">End-to-End Travel with <br>
+                    <span class="text-green-600">FARWAH Express</span></h1>
+                </div>
+                <button class="btn btn-outline bg-green-600 mt-6"><a href="#buy-ticket">Buy Tickets</a></button>
         </section>
 
         <!-- Offer Section -->
-        <section class="offer-section mt-16 p-6">
+        <section class="offer-section lg:mt-16 lg:p-6">
             <h2 class="text-center text-xl font-bold">Best offers for you</h2>
 
             <div class="grid grid-cols-2 gap-4 mt-6">
@@ -90,9 +75,10 @@
             <div class="flex justify-center mt-6">
             <button class="btn btn-outline btn-success">See All Offers</button>
             </div>
+            <span id="buy-ticket"></span>
         </section>
         <!-- Paribahan Section -->
-        <section class="paribahan p-10 bg-[#F7F9F8]">
+        <section class="paribahan p-10 bg-[#F7F9F8] border-t-2 border-green-600 rounded-t-[10%]">
             <!-- text-box -->
             <div class="text-center mb-7">
                 <h2 class="text-2xl font-bold">Farwah Express</h2>
@@ -152,7 +138,7 @@
                     <hr>
                     <div class="flex justify-between p-4">
                     <!--Seat Available Area -->
-                        <div class="flex gap-2 text-green-600">
+                        <div class="flex gap-2">
                             <span><img src="./images/seat-gray.png" alt=""></span><span>Available</span>
                         </div>
                         <div class="flex gap-2 text-green-600">
@@ -163,7 +149,7 @@
                     </div>
                     <hr>
                     <!-- strianig icon -->
-                    <p><img src="./images/steering-wheel-removebg-preview.png" alt="" class="text-black float-end"></p>
+                    <p><img src="./images/steering-wheel-removebg-preview.png" alt="" class="text-black float-end bg-slate-300 pl-8 pr-8 pt-4 pb-4 rounded-xl"></p>
                     <!-- A-block -->
                         <div class="flex justify-between w-full p-4">
                             <div class="flex gap-4">
@@ -178,7 +164,7 @@
                         </div>
                         <!-- b-block -->
                         <div class="flex justify-between w-full p-4">
-                            <div class="flex gap-4">
+                            <div class="flex lg:gap-4 gap-2 ">
                                 <span class="flex justify-center items-center">B</span>
                                 <button class="seat">B1</button>
                                 <button class="seat">B2</button>
@@ -190,7 +176,7 @@
                         </div>
                         <!-- c-block -->
                         <div class="flex justify-between w-full p-4">
-                            <div class="flex gap-4">
+                            <div class="flex lg:gap-4 gap-2">
                                 <span class="flex justify-center items-center">C</span>
                                 <button class="seat">C1</button>
                                 <button class="seat">C2</button>
@@ -200,39 +186,9 @@
                                 <button class="seat">C4</button>
                             </div>
                         </div>
-                        <!-- d-block -->
-                        <!-- <div class="flex justify-between w-full p-4">
-                            <div class="flex gap-4">
-                                <span class="flex justify-center items-center">D</span>
-                                <button class="seat">D1</button>
-                                <button class="seat">D2</button>
-                            </div>
-                            <div>
-                                <button class="seat">D3</button>
-                                <button class="seat">D4</button>
-                            </div>
-                        </div> -->
-                        <!-- -block -->
-                        <!-- <div class="flex justify-between w-full p-4">
-                            <div class="flex gap-4">
-                                <span class="flex justify-center items-center">E</span>
-                                <button class="seat">E1</button>
-                                <button class="seat">E2</button>
-                            </div>
-                            <div>
-                                <button class="seat">E3</button>
-                                <button class="seat">E4</button>
-                            </div>
-                        </div> -->
-                        <!-- e-block -->
-                        <!-- f-block -->
-                        <!-- g-block -->
-                        <!-- h-block -->
-                        <!-- i-block -->
-                        <!-- j-block -->
                 </div>
                 <hr class="">
-                <div class="border-2 h-96 border-dashed">
+                <div class="border-l-2 lg:h-96 border-dashed">
 
                 </div>
                 <!-- Purchase History -->
@@ -241,7 +197,7 @@
                     <hr>
                     <!--Display purchase History  -->
                     <div class="flex justify-between p-4">
-                        <p>Seat<span id="booking-seats" class="bg-green-600 text-green-600 text-white pl-2 pr-2 ml-2">0</span></p>
+                        <p>Seat<span id="booking-seats" class="bg-green-600 text-white pl-2 pr-2 ml-2">0</span></p>
                         <p>Class</p>
                         <p>Price</p>
                     </div>
@@ -267,6 +223,11 @@
                     </div>
                    <!-- next Button -->
                     <label for="my_modal_6" class="btn btn-success bg-green-600 w-full rounded-3xl text-white text-2xl font-semibold">Next</label>
+                    <!-- Terms and Conditions div -->
+                    <div class="flex justify-between mt-6">
+                        <a href="" class="underline">Terms and Conditions</a>
+                        <a href="" class="underline">Cancellation Policy</a>
+                    </div>
 
                     <!-- Modal -->
                     <input type="checkbox" id="my_modal_6" class="modal-toggle" />
@@ -292,64 +253,22 @@
             </div>
 
         </section>
-        <script>
-            let LeftSeats = 12;
-            let price =0;
-            // const LeftSeats = document.querySelectorAll('#left-seats').innerText;
-            const seats = document.querySelectorAll('.seat');
-            let bookingSeats =0;
-            let seatCollection =[];
-            for(let i = 0; i < seats.length; i++){
-                let seat =seats[i];
-                seat.addEventListener('click', function(){
-                    const seatNumber = seat.innerText;
-                    if(seatCollection.includes(seatNumber)=== false){
-                        seatCollection.push(seatNumber)
-                       if(seatCollection.length<=4){
-                        bookingSeats++
-                        LeftSeats--
-                        price+=550;
-                        console.log(LeftSeats);
-                        seat.style='color:red; background:green';
-                        document.getElementById('left-seats').innerText = LeftSeats;
-                        document.getElementById('booking-seats').innerText = bookingSeats;
-                        document.getElementById('total').innerText = price;
-                        // grand total
-                        let grandTotal = price;
-                        const grandTotalElement  = document.getElementById('grand-total');
-                        grandTotalElement.innerText = grandTotal;
-                        // coupon apply
-                        const applyBtn = document.getElementById('coupon-apply');
-                        const apply_Div =document.getElementById('coupon-apply-div'); 
-                        if(seatCollection.length==4){
-                            applyBtn.removeAttribute('disabled')
-                        }
-                        applyBtn.addEventListener('click', function(){
-                            const couponValue =document.getElementById('coupon-input').value;
-                            if(couponValue==='NEW15'){
-                                const newOffer = grandTotal - grandTotal*.15;
-                                grandTotalElement.innerText = newOffer;
-                                apply_Div.classList.add('hidden');
-                            }else if(couponValue==='Couple 20'){
-                                apply_Div.classList.add('hidden');
-                                const newOffer = grandTotal - grandTotal*.20;
-                                grandTotalElement.innerText = newOffer;
-                            }
-                        })
-                        // Create Element
-                        let span = document.createElement('span');
-                        span.innerHTML =`<div class="flex justify-between pl-4 pr-4">
-                            <p>${seatNumber}</p>
-                            <p>Economy</p>
-                            <p>550</p>
-                        </div>`
-                        document.getElementById('add').appendChild(span)
-                    }
-                }
-                })
-            }
-        </script>
-            
+        <!-- footer -->
+        <footer class="footer p-10 bg-neutral text-neutral-content">
+            <aside>
+              <h1 class="text-3xl font-bold text-white text-center">P-Ticket</h1>
+              <p>p-ticket Industries Ltd.<br>Providing reliable tech since 1992</p>
+            </aside> 
+            <nav>
+              <h6 class="footer-title">Social</h6> 
+              <div class="grid grid-flow-col gap-4">
+                <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg></a>
+                <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
+                <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
+              </div>
+            </nav>
+          </footer>
+            <script src="./js/script.js"></script>
     <script src="https://kit.fontawesome.com/09ff4c6b49.js" crossorigin="anonymous"></script>
 </body>
 </html>
