--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     </div>
                     <!--Coupon apply -->
                     <div class="flex justify-between p-4" id="coupon-apply-div">
-                        <input type="text" id="coupon-input" class="p-2 rounded-lg border-2">
+                        <input type="text" id="coupon-input" class="p-2 rounded-lg border-2" placeholder="Have any coupon?">
                         <button id="coupon-apply" class="btn btn-success text-white" disabled>Apply</button>
                     </div>
                    <!-- next Button -->
